--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,10 @@
-name: Run Tests
+name: CI
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
@@ -21,14 +21,14 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install packages
         run: |
-          python -m pip install --upgrade pip wheel
-          pip install '.[testing]'
+          python -m pip install --upgrade pip
+          pip install '.[optional]'
       - name: Run mypy
         run: |
-          mypy --install-types --non-interactive ./clone-repos
+          mypy --install-types --non-interactive ./clone_repos
       - name: Run pytest
         run: |
           pytest
       - name: Run flake8
         run: |
-          flake8 ./clone-repos
+          flake8 ./clone_repos
