--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Install packages
         run: |
           python -m pip install --upgrade pip
-          pip install '.[optional]'
+          pip install '.[testing]'
       - name: Run mypy
         run: |
           mypy --install-types --non-interactive ./clone_repos
