--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,8 @@ no_implicit_optional = True
 warn_redundant_casts = True
 warn_return_any = True
 warn_unreachable = True
+
+[tool:pytest]
+addopts =
+  ./tests/
+
