--- a/tests/clone-repos.yaml
+++ b/tests/clone-repos.yaml
@@ -1,8 +1,11 @@
 "https://github.com/seanbreckenridge/ttally":
   pip: install
+  preinstall: "git pull"
 "https://github.com/seanbreckenridge/mal-id-cache":
 "https://github.com/seanbreckenridge/albums":
   pip: editable
+  preinstall:
+    - "git pull"
 "https://github.com/seanbreckenridge/bleanser-fork":
   dirname: bl-fork
   symlink_to: "/tmp"
