--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,62 @@
+[metadata]
+name = clone_repos
+version = 0.1.0
+description = a basic git repo clone script
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = "https://github.com/seanbreckenridge/clone_repos"
+author = Sean Breckenridge
+author_email = "seanbrecke@gmail.com"
+license = MIT
+license_files = LICENSE
+classifiers =
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+keywords =
+    git
+    github
+    clone
+
+[options]
+packages = find:
+install_requires =
+    click>=8.0
+    pyyaml
+    reorder-editable
+python_requires = >=3.9
+include_package_data = True
+
+[options.packages.find]
+exclude =
+    tests*
+include =
+    clone_repos
+
+[options.entry_points]
+console_scripts =
+    clone-repos = clone_repos.__main__:main
+
+[options.extras_require]
+testing =
+    flake8
+    mypy
+    pytest
+
+[options.package_data]
+clone_repos = py.typed
+
 [flake8]
-ignore=E501,E402,W503,E266,E203
+ignore = E501,E402,W503,E266,E203
 
 [mypy]
 pretty = True
 show_error_context = True
-show_error_codes   = True
+show_error_codes = True
 check_untyped_defs = True
 namespace_packages = True
 disallow_any_generics = True
@@ -19,5 +71,4 @@ warn_unreachable = True
 
 [tool:pytest]
 addopts =
-  ./tests/
-
+    ./tests/
