--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 0.1.0
 description = a basic git repo clone script
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = "https://github.com/seanbreckenridge/clone_repos"
+url = https://github.com/seanbreckenridge/clone_repos
 author = Sean Breckenridge
 author_email = "seanbrecke@gmail.com"
 license = MIT
