--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = clone_repos
+name = cl-repos
 version = 0.1.0
 description = a basic git repo clone script
 long_description = file: README.md
