--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = cl-repos
-version = 0.1.0
+name = cl_repos
+version = 0.1.1
 description = a basic git repo clone script
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -17,6 +17,7 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 keywords =
     git
     github
